@@ -1,3 +1,8 @@
+2012-03-07  Torbjorn Granlund  <tege@gmplib.org>
+
+	* tune/tuneup.c (tune_redc): Better handle situation where redc_2 is
+	never faster.
+
 2012-03-06  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/bobcat/mul_basecase.asm: New file.
